# SoftwareArchitecture

./: README.md
Lab1_Structurizr/: workspace.dsl
hl_mai_lab_01/: CMakeLists.txt  database.cpp  docker-compose.yml  http_request_factory.h  init.sql  main.cpp  openapi.yaml  user.cpp
hl_mai_lab_01/user_service/: Dockerfile
hl_mai_lab_01/web_server/: http_web_server.h
hl_mai_lab_02/: CMakeLists.txt  data.sql  http_web_server.h  message.cpp  message_handler.h  post.cpp  post.h  post_handler.h
hl_mai_lab_03/: config.h  docker-compose.yml  message.yml
hl_mai_lab_04/: CMakeLists.txt  Dockerfile  cache.cpp  config.cpp  database.cpp  docker-compose.yml  json_type_handlers.h  message.h  message_handler.h  post.yml  schema.sql  server.cpp  user.cpp  user_handler.h
hl_mai_lab_04/api_gateway/: main.cpp
hl_mai_lab_05/: config.h  http_request_factory.h  mongo-init.sh  post_handler.h  social_network_dockerfile  social_network_gateway_dockerfile  user.yml  userData.h
hl_mai_lab_05/api_gateway/: main.cpp
